# 3DViewer

./: settings.gradle
3DApp/: build.gradle
3DApp/src/androidTest/java/tech/xx/a3dviewer/: ExampleInstrumentedTest.java
3DApp/src/main/: AndroidManifest.xml
3DApp/src/main/java/tech/xx/a3dviewer/: MainActivity.java  MyGLSurfaceView.java  MyRenderer.java  TestActivity.java
3DApp/src/main/res/layout/: activity_main.xml  activity_test.xml
3DApp/src/main/res/values-night/: themes.xml
3DApp/src/test/java/tech/xx/a3dviewer/: ExampleUnitTest.java
3DLib/: build.gradle
3DLib/src/androidTest/java/tech/xx/a3dlib/: ExampleInstrumentedTest.java
3DLib/src/main/: AndroidManifest.xml
3DLib/src/main/cpp/: CMakeLists.txt  a3dlib.cpp
3DLib/src/main/java/tech/xx/a3dlib/: NativeLib.java
3DLib/src/test/java/tech/xx/a3dlib/: ExampleUnitTest.java
JavaVTK/: build.gradle
JavaVTK/src/androidTest/java/tech/xx/javavtk/: ExampleInstrumentedTest.java
JavaVTK/src/main/: AndroidManifest.xml
JavaVTK/src/main/cpp/: CMakeLists.txt  javavtk.cpp  main.cxx
JavaVTK/src/main/java/com/kitware/JavaVTK/: JavaVTKActivity.java  JavaVTKLib.java  JavaVTKView.java  VTKRender.java
JavaVTK/src/main/java/tech/xx/javavtk/: NativeLib.java
JavaVTK/src/test/java/tech/xx/javavtk/: ExampleUnitTest.java
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
